# QuIP

./: .gitignore  Makefile  README.md  _config.yml  colab.html  index.md  local-setup.md  myst.yml  pyproject.toml  requirements-book.txt
.githooks/: pre-commit
.github/workflows/: jupyter-book.yml
notebooks_data/: 3-GAMA_coefficients.csv  3-GAMA_feasible_starts.csv  3-GAMA_graver_order.csv
notebooks_jl/: 2-QUBO.ipynb  3-GAMA.ipynb  4-DWave.ipynb  5-Benchmarking.ipynb  Project.toml
notebooks_jl/envs/1-MathProg/: Manifest.toml  Project.toml
notebooks_jl/envs/2-QUBO/: Manifest.toml  Project.toml
notebooks_jl/envs/3-GAMA/: Manifest.toml  Project.toml
notebooks_jl/envs/4-DWave/: Manifest.toml  Project.toml
notebooks_jl/envs/5-Benchmarking/: Manifest.toml  Project.toml
notebooks_jl/envs/sysimage/: Manifest.toml  Project.toml
notebooks_py/: 1-MathProg_python.ipynb  2-QUBO_python.ipynb  3-GAMA_python.ipynb  4-DWAVE_python.ipynb  5-Benchmarking_python.ipynb  6-QCi_python.ipynb
scripts/: Manifest.toml  Project.toml  create_sysimage.jl  find_julia.sh  notebook_bootstrap.jl  prepare_release.jl  verify_julia_env_smokes.jl  verify_notebook5_julia_cache_smoke.jl  verify_notebooks.py
tests/: test_notebook3_pair_sync.py  test_notebook4_pair_sync.py  test_notebook5_helpers.py  test_notebook5_notebook_sources.py  test_verify_notebooks.py
